[package]
name = "rumble"
version = "0.3.0"
authors = ["Micah Wylde <micah@micahw.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mwylde/rumble"
homepage = "https://github.com/mwylde/rumble"

description = """
A Rust Bluetooth Low Energy (BLE) central module
library, currently supporting Linux/Bluez
"""

readme = "README.md"
keywords = ["bluetooth", "BLE", "IOT", "bluez","bluenrg"]
categories = ["network-programming", "hardware-support"]

[dependencies]
bluenrg = { git = "https://github.com/Daniel-Berton-STI-ltd/bluenrg" , rev = "bc019d47dd487b3efcb0560d88d6f92201ff1716" }
backtrace = "0.3.50"
bitflags = "1.2.1"
bytes = "0.5.6"
enum_primitive = "0.1.1"
failure = "0.1.8"
failure_derive = "0.1.8"
libc = "0.2.74"
log = "0.4.11"
nix = "0.18.0"
num = "0.3.0"
nb = "1.0.0"


[dependencies.nom]
version = "^4.0"
features = ["verbose-errors"]

[dev-dependencies.rand]
version = "0.7.3"
